--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color: burlywood;
+	color: antiquewhite;
 }
 
 #game-canvas {
